ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
  name: searx
  namespace: searx
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: morty
            port:
                number: 3000
        path: /morty/
        pathType: ImplementationSpecific
      - backend:
          service:
            name: searx
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - example.com
    secretName: searx
